# ZenConverter

./: .gitignore  DONATE.md  NOTICE  README.md  README_zh.md  gradle.properties  settings.gradle.kts  test.kt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml  baseline-prof.txt  startup-prof.txt
app/src/main/assets/fonts/: README.md
app/src/main/res/drawable/: ic_stat_zenconverter.xml
app/src/main/res/values/: strings.xml  (+1 more)
docs/: architecture.md  development-setup.md  license-and-attribution.md  release-automation.md  roadmap.md  technical-route.md
docs/decisions/: 0001-native-android-first.md  0002-media-engine-strategy.md  0003-first-media3-export.md  0004-default-output-and-media3-presets.md  0005-native-media3-audio-video-scope.md  0006-first-ffmpeg-compatibility-path.md  0007-self-built-ffmpegkit-next.md  0008-native-image-pdf-conversion.md  0009-pdfbox-android-pdf-merge-text.md  0010-manual-github-update-checks.md  0011-ffmpeg-video-reencode-path.md  0012-ffmpeg-audio-reencode-path.md  0013-ffmpeg-advanced-audio-video-filters.md  0014-ffmpeg-reverse-and-audio-denoise.md  0015-retire-media3-transformer-path.md  0016-ffmpeg-smart-video-compression.md
formats/: registry.yaml  support-matrix.md
gradle/wrapper/: gradle-wrapper.properties
native/office2pdf-jni/: Cargo.toml  README.md
native/office2pdf-jni/src/: lib.rs
scripts/: build-debug.ps1  dev-env.ps1  install-debug.ps1  launch-debug.ps1  split_ui.py
(+22 files in other folders)
